feat: Add page to getAllRooms()